# pycard

./: .gitignore  README.md  pyproject.toml
docs/raw/: 000__conversations.json  001__stage1-spec.json  002__stage2-spec.json  003__stage3-spec.json  004__stage4-spec.json
src/pycard/: __init__.py  app.py  cli.py
tests/: test_smoke.py
